MODE-2304: Refactoring web-explorer application.