@@ -25,8 +25,7 @@ import javax.servlet.ServletRequest;
 import javax.servlet.ServletResponse;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
-import org.jboss.logging.Logger;
-import sun.misc.BASE64Decoder;
+import org.modeshape.common.util.Base64;
 
 /**
  *
@@ -34,8 +33,7 @@ import sun.misc.BASE64Decoder;
  */
 public class AuthFilter implements Filter {
 
-    private final static Logger logger = Logger.getLogger(AuthFilter.class);
-    
+   
     @Override
     public void init(FilterConfig fc) {
     }
@@ -43,15 +41,12 @@ public class AuthFilter implements Filter {
     @Override
     public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException {
         String authHeader = ((HttpServletRequest)request).getHeader("Authorization");
-        logger.debug("Filter is activated");
         if (authHeader != null) {
-            logger.debug("--------------Catch authentication header");
             StringTokenizer st = new StringTokenizer(authHeader);
             if (st.hasMoreTokens()) {
                 String basic = st.nextToken();
                 if (basic.equalsIgnoreCase("Basic")) {
-                    BASE64Decoder decoder = new BASE64Decoder();
-                    String userPass = new String(decoder.decodeBuffer(st.nextToken()));
+                    String userPass = new String(Base64.decode(st.nextToken()));
                     int p = userPass.indexOf(":");
                     if (p != -1) {
                         String userID = userPass.substring(0, p);
